recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not found: value level
		forward(length/(3*level));
                                  ^Koch:18: error: not found: value level
		forward(length/(3*level));
                                  ^